update deprecated method in Unittest